--- a/sass/modules/demo.scss
+++ b/sass/modules/demo.scss
@@ -10,9 +10,9 @@
   line-height: 100px;
 
   .logo {
-    background: url(../images/demo/logo-mask.png) center 0 no-repeat;
-    background-size: 256px 186px;
-    height: 186px;
+    background: url(../images/logo.png) center 0 no-repeat;
+    background-size: 256px 256px;
+    height: 256px;
     margin: 0 auto 26px;
     overflow: hidden;
     text-indent: -9999em;
