color swatches fix

--- a/css/flat-ui.scss.css
+++ b/css/flat-ui.scss.css
@@ -2259,7 +2259,7 @@ textarea[class*="span"] {
   background-color: #45BBFF; }
 
 .palette-green-sea {
-  background-color: #16a085; }
+  background-color: #0088CC; }
 
 .palette-emerald {
   background-color: #2ecc71; }
