--- a/sass/config.scss
+++ b/sass/config.scss
@@ -9,7 +9,7 @@
 // Color Swatches
 // --------------------------------------------------
 $turquoise:     #45BBFF;
-$green-sea:     #16a085;
+$green-sea:     #0088CC;
 
 $emerald:      #2ecc71;
 $nephritis:     #27ae60;
